# Heizlast

./: .gitignore  README.md  pyproject.toml
doc/: heizlast_V5_Dokumentation_01.html  icon_preview.html
docs/: build_user_documentation.py  din_konformitaet.md  entwicklung_letzte_zwei_tage.md
scripts/: clean_up.py  run_cli.py  run_gui.py  zip_it.py
tests/: conftest.py  test_anchors_meta.py  test_app_controller_service_boundaries.py  test_area_ref_outer_toolbar.py  test_attic_auto_elements.py  test_attic_auto_profile_exactness.py  test_attic_extended_roof_models_v26.py  test_attic_geometry_profile_params.py  test_attic_heatload_reporting_regression.py  test_attic_profile_params_roundtrip.py  test_attic_visual_geometry_sync.py  test_auto_walls_edge_spans.py  test_autowalls_default_enabled.py  test_core_public_exports.py  test_ctrl_drag_movement_guard.py  test_deck_transmission_din_conformity.py  test_din_conformity_reporting.py  test_door_insert_workflow.py  test_dormer_geometry_v27.py  test_facade_material_quick_select.py  test_facade_material_roundtrip.py  test_floor_3d_view_v18.py  test_ground_din_ts.py  test_gui_usability_workflow.py  test_house_side_view.py  test_info_and_project_settings.py  test_info_dialog_and_project_settings.py  test_info_menu_and_project_settings.py  test_mini_building_regression.py  test_project_config_roof_type_roundtrip.py  test_project_settings_completeness_v20.py  test_project_settings_dormer_list_v28.py  test_project_settings_navigation_sidebar_v22.py  test_roof_editor_tab_v33.py  test_roof_facets_v32.py  test_roof_line_editor_v30.py  (+19 more)
(+83 files in other folders)
